Navigation z-index fix

--- a/src/components/navigation/navigation.css
+++ b/src/components/navigation/navigation.css
@@ -6,7 +6,7 @@ nav {
   position: fixed;
   top: 0;
   left: 0;
-  z-index: 9999;
+  z-index: 99999999;
   box-shadow: 0 16px 32px 0 rgba(0, 0, 0, 0.05); }
   nav ul {
     width: 100%;
