--- a/src/style.css
+++ b/src/style.css
@@ -210,7 +210,7 @@ nav {
   position: fixed;
   top: 0;
   left: 0;
-  z-index: 9999;
+  z-index: 99999999;
   box-shadow: 0 16px 32px 0 rgba(0, 0, 0, 0.05); }
   nav ul {
     width: 100%;
